# didactic-waffle

./: CMakeLists.txt
res/shaders/: FragmentTexture.shader  VertexTexture.shader
src/: main.cpp
